<resources>
    <string name="app_name">PocOfDigivalApp</string>
    <string name="my_courses">My Courses</string>
    <string name="session_incomplete">Session Incomplete</string>
    <string name="tostart">To Start</string>
    <string name="completed">Completed</string>
    <string name="academic_year">Academic Year</string>
    <string name="three_hypened_string">%s - %s - %s</string>
    <string name="rotation_count">R%s</string>
    <string name="two_hypened_string">%s - %s</string>

    <string name="course_details">%s(%s) • %s</string>
    <string name="course_completed_sessions">%s/%s</string>
    <string name="session_completed">Session Completed %s/%s</string>
    <string name="course_program_name">%s / %s / %s / %s / %s</string>
    <string name="course_program_name_rotation">%s / %s / %s / %s</string>
    <string name="course_rotation">%s / %s</string>
    <string name="schedule_rotation">| Rotation - %s</string>
    <string name="rotation">Rotation %s</string>
    <string name="schedule_session_details">%s • %s • %s</string>
    <string name="schedule_session_details_infra">%s • %s</string>
    <string name="feedback_session">%s  Total feedbacks / %s Sessions</string>
    <string name="courses_session_status">%s / %s Sessions</string>
    <string name="completed_txt">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="to_start">To Start</string>
    <string name="academic_year_str">Academic Year %s</string>
    <string name="search">Search</string>

    <string name="no_courses_found">No Courses Found!</string>
    <string name="all">All</string>

    <string name="course_name_with_rotation_term">%s - %s - %s / %s</string>
    <string name="course_name_with_term">%s - %s / %s</string>
    <string name="course_level_with_date">%s / %s - %s</string>
    <string name="sessions_attended">%s / %s Sessions Attended</string>
    <string name="sessions_completed_and_rating">%s/%s Sessions Completed</string>
    <string name="absent_leave_count">%s Leave • %s Absent</string>
    <string name="attendance_details">Attendance Details</string>
    <string name="title_activity_navigation_drawer">Navigation_Drawer_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--Dashboard-->
    <string name="dashboard">Dashboard</string>
    <string name="courses">Courses</string>
    <string name="course_coordinator">Admin Courses</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="basic_details">Basic Details</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign out</string>
    <string name="attendance_marked_successfully">Attendance marked successfully</string>
    <string name="str_attendance">Attendance</string>
    <string name="continue_to_lecture">Continue to lecture</string>
    <string name="at_symbol">"@"</string>
    <string name="name">Name</string>
    <string name="employee_id">Employee ID</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="recent_documents">Recent Documents</string>
    <string name="view_all"><u>View All</u></string>
    <string name="enrolled_program">Enrolled Program</string>
    <string name="enrolled_term">Enrolled Term</string>
    <string name="enrolled_date">Enrolled date</string>
    <string name="email">Email</string>


    <string name="enter_email_id">Enter Email ID</string>
    <string name="temporary_password">Temporary Password</string>
    <string name="signup">Sign up</string>
    <string name="enter_password">Enter Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login">Log in</string>
    <string name="set_new_password">Set New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_and_continue">Save And Continue</string>
    <string name="password_not_match">Password Not Match</string>

    <string name="provide_valid_email">Provide a valid email!</string>
    <string name="provide_valid_credentials">Provide valid credentials!</string>
    <string name="staff_verification">Staff Verification</string>
    <string name="add_basic_profile_details_and_vaccination_details">Add Basic Profile Details and Vaccination Details</string>
    <string name="add_details">Add Details</string>
    <string name="documents">Documents</string>
    <string name="biometric">Biometric</string>
    <string name="upload_required_documents">Upload required documents</string>
    <string name="continue_txt">Continue</string>
    <string name="edit">Edit</string>
    <string name="completed_profile"> %s / %s Completed</string>
    <string name="upload">Upload</string>
    <string name="take_biometric_registration">Take Biometric Registration</string>
    <string name="register">Register</string>
    <!--Basic Details-->
    <string name="profile_steps">Step %s / 3 - %s</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="enter_family_name">Enter Family Name</string>
    <string name="select_gender">Select Gender</string>
    <string name="enter_employee_id">Enter Employee ID</string>
    <string name="enter_phone_no">Enter Phone Number</string>

    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="middle_name">Enter Middle Name</string>
    <string name="family_name">Enter Family Name</string>
    <string name="gender">Gender</string>
    <string name="phone_no">Phone Number</string>
    <string name="next">Next</string>

    <!--Profile Details-->
    <string name="passport_no">Passport Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="building_no_and_street_name">Building No &amp; Street Name</string>
    <string name="floor_no">Floor Number</string>

    <string name="back">Back</string>
    <string name="vaccination">Vaccination</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="enter_passport_no">Enter Passport Number</string>
    <string name="enter_dob">Enter Date of Birth</string>
    <string name="select_nationality">Enter Nationality</string>
    <string name="enter_national_id">Enter National Id</string>
    <string name="enter_building_no_and_street_name">Enter Building No &amp; Street Name</string>
    <string name="enter_floor_no">Enter Floor Number</string>
    <string name="select_country">Select Country</string>
    <string name="select_district">Select District</string>
    <string name="select_city">Select City</string>
    <string name="enter_zipcode">Enter Zipcode</string>
    <string name="office_no">Office Number</string>
    <string name="office_extension">Office Extension</string>
    <string name="enter_office_no">Enter Office Number</string>
    <string name="enter_office_extension">Enter Office Extension</string>

    <string name="no_network_connection">No network connection</string>
    <string name="you_are_online">You\'re online</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="server_error">Server Error</string>
    <string name="something_times">Time out !</string>

    <!--Profile Details Screen-->
    <string name="passport_number">Passport Number</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="nationality">Nationality</string>
    <string name="national_id">National Id</string>
    <string name="address_details">Address Details</string>
    <string name="building_no">Building No &amp; Street Name</string>
    <string name="floor_number">Floor Number</string>
    <string name="country">Country</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="other_contact_details">Other Contact Details</string>
    <string name="office_number">Office Number</string>

    <!--Vaccination Details-->
    <string name="vaccination_details">Vaccination Details</string>
    <string name="Vaccination">Vaccination</string>
    <string name="covid_19">Covid-19</string>
    <string name="choose">Choose</string>
    <string name="yellow_fever">Yellow Fever (Optional)</string>

    <string name="add_new_documents">Add New Documents</string>
    <string name="take_photo">Take Photo</string>
    <string name="browse">Browse</string>

    <string name="your_profile_under_review">Your Profile is under Review, Kindly Wait for Confirmation Mail</string>
    <string name="application_status">Application Status</string>
    <string name="pending">Pending</string>
    <string name="validation_pending">Validation Pending</string>
    <string name="till_now">Till now</string>
    <string name="profile_details_submitted_successfully">Profile Details Submitted Successfully</string>
    <string name="overview">Overview</string>
    <string name="registration_successful">Registration Successful !</string>
    <string name="invalid">Invalid</string>
    <string name="resident_national_id">Resident / National id</string>
    <string name="edit_txt">Edit</string>

    <!--Document-->
    <string name="accepted_formats_with_size">Accepted formats (JPG, PNG) - Upload file max size (6mb)</string>
    <string name="id_proof">ID Proof</string>
    <string name="max_8mb">Max  8 MB</string>
    <string name="upload_postal_address">Upload Postal Address</string>
    <string name="document">Document</string>
</resources>

