<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_navigation_drawer">
    <group
        android:id="@+id/group_menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navDashboard"
            android:checked="true"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/navCourses"
            android:checkable="false"
            android:icon="@drawable/ic_courses_dashboard_menu"
            android:title="@string/courses"/>
        <item
            android:id="@+id/navCoursesAdmin"
            android:checkable="false"
            android:icon="@drawable/ic_calendar"
            android:title="@string/course_coordinator"/>
        <item
            android:id="@+id/navCalendar"
            android:checkable="false"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar"/>
        <item
            android:id="@+id/navProfile"
            android:checkable="false"
            android:icon="@drawable/ic_icon_awesome_user"
            android:title="@string/profile"
            android:visible="false"/>
        <item
            android:id="@+id/navHelp"
            android:checkable="false"
            android:icon="@drawable/ic_help"
            android:title="@string/help"/>
    </group>
</menu>